@@ -117,7 +117,6 @@
 ;;; Buffer management
 (straight-use-package 'buffer-env)
 (straight-use-package 'ws-butler)
-(straight-use-package 'popper)
 (straight-use-package 'bufferlo)
 
 ;;; Version control
